# homeboy

./: .gitignore  Cargo.toml  LICENSE
src/: lib.rs  main.rs
src/runner/: mod.rs  runner.rs
src/runner/location/: mod.rs
src/runner/memory/: memory.rs
src/runner/search/: search.rs
src/runner/spotify/: spotify.rs
src/runner/voice/: deepgram.rs  mod.rs  record.rs
src/templating/: grammar.pest  handler.rs  matcher.rs  mod.rs  parser.rs  template.rs
tests/: matching_tests.rs  template_handler_test.rs  template_parsing_tests.rs
tests/res/: test_template_file.txt
