[package]
name = "homeboy"
version = "0.1.0"
edition = "2021"

[dependencies]
audio = "0.2.0"
bytes = "1.10.0"
cortex-lang = "0.1.3-alpha"
deepgram = "0.6.6"
dotenv = "0.15.0"
futures = "0.3.31"
pest = "2.7.15"
pest_derive = "2.7.15"
regex = "1.11.1"
rodio = "0.20.1"
rspotify = { version = "0.14.0", features = ["cli"] }
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
