[package]
name = "homeboy"
version = "0.1.0"
edition = "2021"

[dependencies]
audio = "0.2.0"
bytes = "1.10.0"
cortex-lang = "0.1.0"
cpal = "0.15.3"
deepgram = "0.6.6"
dotenv = "0.15.0"
futures = "0.3.31"
geolocation = "0.2.1"
hound = "3.5.1"
openweathermap = "0.2.4"
pest = "2.7.15"
pest_derive = "2.7.15"
rdev = "0.5.3"
regex = "1.11.1"
reqwest = { version = "0.12.12", features = ["blocking", "json"] }
rodio = "0.20.1"
rspotify = { version = "0.14.0", features = ["cli"] }
scraper = "0.23.1"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.140"
thiserror = "2.0.11"
tokio = { version = "1.43.0", features = ["full"] }
